<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.quran.quranPages.quranPageContainer.QuranPageContainerFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:layout_gravity="top"
        android:id="@+id/quran_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_constraint_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:padding="@dimen/_3sdp"
        android:visibility="invisible"
        android:background="@drawable/text_frag_quran_page_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/gray_with_obasity">

        <TextView
            android:id="@+id/fragQuran_search"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/text_frag_quran_style"
            android:text="@string/serch_with_aya_page_txt"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintTop_toBottomOf="@+id/fragQuran_Juzz"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/fragQuran_Juzz"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/Juzz_page_txt"
            style="@style/text_frag_quran_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/fragQuran_Soraa"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/text_frag_quran_style"
            android:text="@string/index_page_txt"

            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragQuran_Saved"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/fragQuran_Saved"
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/text_frag_quran_style"
            android:text="@string/saved_pic_txt"

            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/fragQuran_tafser"
            style="@style/text_frag_quran_style"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/tfseer_page_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.34"
            app:layout_constraintWidth_percent="0.5" />
        <TextView
            android:id="@+id/fragQuran_adding"
            style="@style/text_frag_quran_style"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/adding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHeight_percent="0.34"
            app:layout_constraintWidth_percent="0.5" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/fragQuran_Juzz"
            tools:layout_editor_absoluteX="4dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/fragQuran_search"
            tools:layout_editor_absoluteX="4dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>