<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.settings.SettingFragment">

    <include
        android:id="@+id/appbar"
        layout="@layout/custom_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/change_location"
        android:layout_width="match_parent"
        style="@style/text_frag_setting_style"
        android:drawableStart="@drawable/edit_location"
        android:text="@string/change_location"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/appbar"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ed_background"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_14sdp"

        app:layout_constraintTop_toBottomOf="@id/change_location"
        />
    <TextView
        android:id="@+id/take_notification_permission"

        android:layout_width="match_parent"
        style="@style/text_frag_setting_style"
        android:drawableStart="@drawable/edit_notifications"
        android:text="@string/send_msg"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/change_location" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ed_background"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_14sdp"

        app:layout_constraintTop_toBottomOf="@id/take_notification_permission"
        />


    <TextView
        android:id="@+id/quran_finish"
        style="@style/text_frag_setting_style"
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/finish_quran"
        android:text="@string/ktma_doaa"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/take_notification_permission" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ed_background"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_14sdp"

        app:layout_constraintTop_toBottomOf="@id/quran_finish"
        />
    <TextView
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        style="@style/text_frag_setting_style"
        android:text="تحديث مواقيت الصلوات والمنبه يدويا"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/quran_finish"
        android:drawableStart="@drawable/refresh" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ed_background"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_14sdp"

        app:layout_constraintTop_toBottomOf="@id/refresh"
        />
    <TextView
        android:id="@+id/timing"
        android:layout_width="match_parent"
        style="@style/text_frag_setting_style"
        android:text=" تحديد التوقيت الصيفي او الشتوي"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/refresh"
        android:drawableStart="@drawable/time_detect" />
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/custom_shimmer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_6sdp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/refresh"
        android:orientation="vertical"
        android:visibility="invisible"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/search_gereen"

            />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ed_background"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_14sdp"

        app:layout_constraintTop_toBottomOf="@id/timing"
        />
    <TextView
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        style="@style/text_frag_setting_style"
        android:text="سياسه الخصوصيه"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/timing"
        android:drawableStart="@drawable/baseline_privacy_tip_24" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ed_background"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_14sdp"

        app:layout_constraintTop_toBottomOf="@id/privacy"
        />
    <TextView
        android:id="@+id/aboutUs"
        android:layout_width="match_parent"
        style="@style/text_frag_setting_style"
        android:drawableStart="@drawable/baseline_info_24"
        android:text="@string/about_us"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/privacy" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ed_background"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginHorizontal="@dimen/_14sdp"

        app:layout_constraintTop_toBottomOf="@id/aboutUs"
        />
</androidx.constraintlayout.widget.ConstraintLayout>